Unit Tests and API response code changes