@@ -28,6 +28,9 @@ dependencies {
     testImplementation("org.springframework.boot:spring-boot-starter-webmvc-test")
     testImplementation("org.jetbrains.kotlin:kotlin-test-junit5")
     testImplementation("org.springframework.security:spring-security-test")
+    testImplementation("io.kotest:kotest-assertions-core:5.8.0")
+    testImplementation("io.kotest:kotest-runner-junit5:5.8.0")
+
     runtimeOnly("com.h2database:h2")
     testRuntimeOnly("org.junit.platform:junit-platform-launcher")
 
@@ -59,5 +62,7 @@ spotless {
         ktlint()
     }
 }
+
+tasks.test { jvmArgs("-XX:+EnableDynamicAgentLoading") }
 
 tasks.withType<Test> { useJUnitPlatform() }
